alignment fix for close btn

--- a/apps/courses/src/app/content-player/content-player/content-player.component.scss
+++ b/apps/courses/src/app/content-player/content-player/content-player.component.scss
@@ -69,6 +69,7 @@
       }
 
       .close-icon {
+        align-self: start;
         width: 22px;
         height: auto;
       }
@@ -255,9 +256,6 @@ and (orientation: landscape) {
           .sub-header {
             font-size: 1rem;
           }
-        }
-        .close-icon {
-          align-self: start;
         }
       }
       .mobile-content-menu {
